Redirects with saving all utm tags
Add Yandex.Metrika to certificate page

--- a/src/uLearn.Web/Views/Certificates/Certificate.cshtml
+++ b/src/uLearn.Web/Views/Certificates/Certificate.cshtml
@@ -34,3 +34,5 @@
 		<a href="#" onclick="this.parentNode.style.display = 'none';return false;">Закрыть</a>
 	</div>
 }
+
+@Html.Partial("_YandexMetrika")
