Add logging to quiz ordering block, try to catch a bug on production server
+ remove staging vostok url
+ fix bug with bold text in quizes

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -21,7 +21,11 @@
 .quiz-block-input {
 }
 
-.load-content {
+.quiz-block-input label {
+	font-weight: normal;
+}
+
+.quiz-block-input .load-content {
 }
 
 .visible-on-parent-hover {
