--- a/src/uLearn.Web/Views/Admin/Comments.cshtml
+++ b/src/uLearn.Web/Views/Admin/Comments.cshtml
@@ -78,7 +78,7 @@
 		}
 		@if (Model.Comments.Count == 0)
 		{
-			<p class="text-muted">Комментариев нет.</p>
+			<p class="text-muted">Комментариев нет</p>
 		}
 	</div>
 </div>
