--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
 	@Styles.Render("~/ulearn.bundle.css")
 	@Styles.Render("~/katex/katex.min.css")
 	@Scripts.Render("~/modernizr.bundle.js")
+    @Html.Partial("_Retargeting")
 </head>
 <body>
 <div id="header" class="navbar navbar-inverse navbar-fixed-top">
