Code review comments by users and instructors

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -160,6 +160,16 @@ p {
 	margin-bottom: 5px;
 }
 
+.markdown-formatting-helper {
+	font-size: 12px;
+	color: #555;
+	vertical-align: top;
+}
+
+.markdown-formatting-helper .fa {
+	vertical-align: text-top;
+}
+
 /* ReSharper restore Html.CssClassElementsNotFound */
 /* ReSharper restore DeclarationIsEmpty */
 /*#endregion */
@@ -820,6 +830,7 @@ li.li-success {
 	outline: none;
 	max-width: none;
 	width: 100%;
+	resize: none;
 }
 
 .comments .reply-form textarea[name=commentText] {
@@ -1857,26 +1868,67 @@ h1 .copy-group-link {
 	border-left-color: #d66;
 	margin-left: -10px;
 	margin-right: 10px;
+	transition: margin-left 0.3s linear, margin-right 0.3s linear;
 }
 
-.exercise__review .exercise__review__header {
-	background-color: #fdf5f5;
+.exercise__review .exercise__review__header,
+.exercise__review .exercise__review__comment__header {	
 	margin: -2px -5px;
-	padding: 2px 5px;
+	padding: 0 5px;
 	color: #aaa;
 	font-size: 9pt;
 }
 
-.exercise__review .exercise__review__header .author {
-	color: #b99;
+.exercise__review .exercise__review__header {
+	background-color: #fdf5f5;
 }
 
-.exercise__review .exercise__review__header .close {
-	font-size: 13pt;
+.exercise__review .exercise__review__comment__header {
+	margin-top: 5px;
+}
+
+.exercise__review .exercise__review__header .media-left,
+.exercise__review .exercise__review__comment__header .media-left {
+	padding-right: 7px;
+}
+
+.exercise__review .exercise__review__header.with-timestamp .media,
+.exercise__review .exercise__review__comment__header.with-timestamp .media {
+	margin-bottom: -7px;
+}
+
+.exercise__review .exercise__review__header .media-body,
+.exercise__review .exercise__review__comment__header .media-body {
+	line-height: 14px;
+	position: relative;
+	top: -2px;
+}
+
+.exercise__review .exercise__review__header.without-timestamp .media-body,
+.exercise__review .exercise__review__comment__header.without-timestamp .media-body {
+	padding-top: 7px;
+}
+
+.exercise__review .exercise__review__comment__header .timestamp {
+	font-size: 8pt;
+}
+
+.exercise__review .exercise__review__header .author {
+	color: #a57575;
+}
+
+.exercise__review .exercise__review__comment__header .author {
+	color: #666;
+}
+
+.exercise__review .exercise__delete-review:hover,
+.exercise__review .exercise__delete-review-comment:hover {
+	color: black;
 }
 
 .exercise__review .exercise__review__comment {
-	padding: 4px 0;
+	padding: 6px 0 4px;
+	line-height: 17px;
 }
 
 .exercise__review .exercise__review__comment pre {
@@ -1904,6 +1956,27 @@ h1 .copy-group-link {
 	border-radius: 5px;
 	background: #f6dddd;
 	-webkit-box-shadow: inset 0 0 6px rgba(100,0,0,0.5);
+}
+
+.exercise__review__reply-form {
+	margin-top: 8px;
+}
+
+.exercise__review__reply-form input[type="text"] {
+	width: 100%;
+	height: 25px;
+	padding: 0 4px; 
+}
+
+.exercise__review__reply-form textarea {
+	resize: none;
+	width: 100%;
+	padding: 0 4px;
+	display: none;
+}
+
+.exercise__review__reply-footer {
+	display: none;
 }
 
 .exercise__code__reviewed-fragment {
