--- a/src/uLearn.Web/Views/Exercise/Submission.cshtml
+++ b/src/uLearn.Web/Views/Exercise/Submission.cshtml
@@ -120,6 +120,7 @@
 					{
 						Review = review,
 						ManualChecking = Model.ManualChecking,
+						CurrentUser = Model.CurrentUser,
 					})
 				}
 			</div>
