--- a/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
+++ b/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
@@ -16,7 +16,7 @@
 	<div class="row">
 		<div class="col-sm-6">
 			<textarea class="exercise__add-review__comment"></textarea>
-			<span class="with-long-tooltip cursor-pointer" data-toggle="tooltip" data-placement="bottom" title="**жирный текст**, __курсивный текст__, `код`, ```многострочный код```">
+			<span class="markdown-formatting-helper with-long-tooltip cursor-pointer" data-toggle="tooltip" data-placement="bottom" title="**жирный текст**, __курсивный текст__, `код`, ```многострочный код```">
                 <span class="fa fa-question-circle"></span>
 				Работает форматирование
 			</span>
