--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -129,10 +129,32 @@ p {
 }
 
 .revealed {
-	background-color: #FDD;
-	padding: 10px;
-	-ms-border-radius: 5px;
-	border-radius: 5px;
+	background-color: #313131;
+	padding: 20px;
+	color: white !important;
+}
+
+.revealed .cm-s-pastel-on-dark.CodeMirror {
+	background-color: #313131;
+}
+
+.revealed__description {
+	font-style: italic;	
+	margin-bottom: 15px;
+}
+
+.revealed code {
+	color: white;
+	background-color: #39562d;
+}
+
+.revealed h2 {
+	margin-bottom: 20px;
+}
+
+.revealed h3 {
+	margin-bottom: 20px;
+	line-height: 20px;
 }
 
 .revealed p:last-child {
@@ -1858,14 +1880,14 @@ h1 .copy-group-link {
 }
 
 .exercise__review {
-	border-left: 3px solid #fdd;
+	border-left: 3px solid #bbd7ef;
 	margin: 10px 0;
-	padding: 2px 5px;
+	padding: 2px 0 2px 5px;
 	cursor: pointer;
 }
 
 .exercise__review.selected {
-	border-left-color: #d66;
+	border-left-color: #337ab7;
 	margin-left: -10px;
 	margin-right: 10px;
 	transition: margin-left 0.3s linear, margin-right 0.3s linear;
@@ -1877,10 +1899,6 @@ h1 .copy-group-link {
 	padding: 0 5px;
 	color: #aaa;
 	font-size: 9pt;
-}
-
-.exercise__review .exercise__review__header {
-	background-color: #fdf5f5;
 }
 
 .exercise__review .exercise__review__comment__header {
@@ -1913,10 +1931,7 @@ h1 .copy-group-link {
 	font-size: 8pt;
 }
 
-.exercise__review .exercise__review__header .author {
-	color: #a57575;
-}
-
+.exercise__review .exercise__review__header .author,
 .exercise__review .exercise__review__comment__header .author {
 	color: #666;
 }
@@ -1959,7 +1974,7 @@ h1 .copy-group-link {
 }
 
 .exercise__review__reply-form {
-	margin-top: 8px;
+	margin-top: 3px;
 }
 
 .exercise__review__reply-form input[type="text"] {
