Google doc-styles for code reviews

--- a/src/uLearn.Web/Views/Exercise/_ExerciseReview.cshtml
+++ b/src/uLearn.Web/Views/Exercise/_ExerciseReview.cshtml
@@ -78,7 +78,7 @@
             </div>
             <div class="pull-right">
                 <span class="markdown-formatting-helper with-long-tooltip cursor-pointer" data-toggle="tooltip" data-placement="bottom" title="**жирный текст**, __курсивный текст__, `код`, ```многострочный код```">
-                    Работает форматирование
+                    <span class="fa fa-question-circle"></span> Форматирование
                 </span>
             </div>
         </div>
