--- a/src/uLearn.Web/Content/antiplagiarism.css
+++ b/src/uLearn.Web/Content/antiplagiarism.css
@@ -1,7 +1,7 @@
 /* Antiplagiarism status */
 
 .antiplagiarism-status {
-    background-color: #ececec;
+    background-color: #f7f7f7;
     padding: 11px 18px;
     color: #333;
     font-size: 13pt;
