--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -1873,6 +1873,11 @@ h1 .copy-group-link {
 	width: 250px;
 	margin-left: 10px;
 	margin-bottom: 25px;
+	
+	background-color: #f7f7f7;
+	padding-left: 10px;
+	padding-right: 10px;
+	box-shadow: inset 7px -5px 4px -4px #ccc;
 }
 
 .exercise__reviews.empty {
@@ -1880,16 +1885,17 @@ h1 .copy-group-link {
 }
 
 .exercise__review {
-	border-left: 3px solid #bbd7ef;
 	margin: 10px 0;
-	padding: 2px 0 2px 5px;
 	cursor: pointer;
+
+	background-color: white;
+	padding: 10px 5px;
+	box-shadow: 0 2px 4px 1px #ccc;
 }
 
 .exercise__review.selected {
-	border-left-color: #337ab7;
-	margin-left: -10px;
-	margin-right: 10px;
+	margin-left: -15px;
+	margin-right: 15px;
 	transition: margin-left 0.3s linear, margin-right 0.3s linear;
 }
 
@@ -1988,6 +1994,7 @@ h1 .copy-group-link {
 	width: 100%;
 	padding: 0 4px;
 	display: none;
+	min-height: 45px;
 }
 
 .exercise__review__reply-footer {
