--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -495,25 +495,30 @@ p {
 
 .quiz-status,
 .exercise-status,
-.exercise-loading {
+.exercise-loading,
+.exercise-block-status {
 	background-color: #d9edf7;
 	padding: 11px 18px;
 	color: #333;
 	font-size: 13pt;
-	margin-bottom: 30px;
+	margin-bottom: 30px;	
 }
 
-.exercise-status,
+.exercise-block-status,
 .exercise-loading {
 	margin-bottom: 0;
 	margin-top: 10px;
 }
 
-.exercise-status.wrong {
+.exercise-block-status {
+	box-shadow: inset 0 -10px 10px -10px #9cbdce;
+}
+
+.exercise-block-status.wrong {
 	background-color: #fd989c;
 }
 
-.exercise-status.waiting {
+.exercise-block-status.waiting {
 	background-color: #fdfa98;
 }
 
@@ -1994,7 +1999,7 @@ h1 .copy-group-link {
 	width: 100%;
 	padding: 0 4px;
 	display: none;
-	min-height: 45px;
+	min-height: 48px;
 }
 
 .exercise__review__reply-footer {
