--- a/src/uLearn.Web/Views/Shared/Notifications.cshtml
+++ b/src/uLearn.Web/Views/Shared/Notifications.cshtml
@@ -1,5 +1,6 @@
 ﻿@* Generator: MvcHelper GeneratePrettyNames: true DisableLinePragmas: true *@
 @using Database.Models
+@using Microsoft.AspNet.Identity
 @using uLearn
 @using uLearn.Quizes
 @using uLearn.Web.Extensions
@@ -182,7 +183,7 @@
 @helper Notification(ReceivedCommentToCodeReviewNotification notification, Course course, HtmlHelper Html, UrlHelper Url, bool collapse = true)
 {
 	var slide = course.GetSlideById(notification.Comment.Review.ExerciseChecking.SlideId);
-	<div class="notifications__received-comment-to-code-review-notification media">
+	<div class="notifications__received-comment-to-code-review-notification media" data-href="@notification.GetUrl(course, "", User.Identity.GetUserId())">
         <div class="media-left">
             @UserAvatar.Avatar(notification.InitiatedBy)
         </div>
