--- a/src/uLearn.Web/Content/antiplagiarism.css
+++ b/src/uLearn.Web/Content/antiplagiarism.css
@@ -46,6 +46,13 @@
     margin: 5px 0;
 }
 
+.antiplagiarism__user-groups {
+    font-size: 12px;
+    color: #666666;
+    display: inline-block;
+    margin-left: 10px;
+}
+
 .antiplagiarism__not-analyzed {
     color: #ccc !important;   
 }
@@ -59,9 +66,9 @@
 }
 
 .antiplagiarism__plagiarism-token-tokensKindsOnly {
-    background-color: rgba(255, 255, 205, 0.7);
+    background-color: rgba(255, 255, 74, 0.7);
 }
 
 .antiplagiarism__plagiarism-token-tokensKindsAndValues {
-    background-color: rgba(255, 205, 205, 0.7);
+    background-color: rgba(255, 117, 117, 0.7);
 }
