--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -1885,6 +1885,12 @@ h1 .copy-group-link {
 	box-shadow: inset 7px -5px 4px -4px #ccc;
 }
 
+@media (max-width: 720px) {
+	.exercise__reviews {
+		width: 150px;
+	}
+}
+
 .exercise__reviews.empty {
 	display: none;
 }
