--- a/src/uLearn.Web/Views/Admin/ManualExerciseCheckingQueue.cshtml
+++ b/src/uLearn.Web/Views/Admin/ManualExerciseCheckingQueue.cshtml
@@ -37,6 +37,10 @@
 			{
 				<p>Время проверки вышло. Выберите другую работу</p>
 			}
+            @if (Model.Message == "checking_removed")
+            {
+	            <p>Студент отправил новое решение по задаче. Старое больше недоступно для код-ревью</p>
+            }
 		</div>
 	}
 
