--- a/src/uLearn.Web/Views/Admin/ManualQuizCheckingQueue.cshtml
+++ b/src/uLearn.Web/Views/Admin/ManualQuizCheckingQueue.cshtml
@@ -30,6 +30,10 @@
 			{
 				<p>Время проверки вышло. Выберите другую работу</p>
 			}
+            @if (Model.Message == "checking_removed")
+            {
+	            <p>Студент отправил новое решение теста. Старое больше недоступно для оценивания</p>
+            }
 		</div>
 	}
 
