--- a/src/uLearn.Web/Views/Admin/ManualExerciseCheckingQueue.cshtml
+++ b/src/uLearn.Web/Views/Admin/ManualExerciseCheckingQueue.cshtml
@@ -39,7 +39,7 @@
 			}
             @if (Model.Message == "checking_removed")
             {
-	            <p>Студент отправил новое решение по задаче. Старое больше недоступно для код-ревью</p>
+	            <p>Студент отправил новое решение по&nbsp;этой задаче. Старое больше недоступно для&nbsp;код-ревью</p>
             }
 		</div>
 	}
