--- a/src/uLearn.Web/Views/Admin/ManualQuizCheckingQueue.cshtml
+++ b/src/uLearn.Web/Views/Admin/ManualQuizCheckingQueue.cshtml
@@ -32,7 +32,7 @@
 			}
             @if (Model.Message == "checking_removed")
             {
-	            <p>Студент отправил новое решение теста. Старое больше недоступно для оценивания</p>
+	            <p>Студент отправил новое решение этого теста. Старое больше недоступно для проверки</p>
             }
 		</div>
 	}
